# linalg_traits

./: 404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  introduction.html  page_2.html  print.html  searcher-c2a407aa.js  searchindex.js  toc-13a32ebc.js  toc.html  toc.js
.github/workflows/: book.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
src/: deriv.rs  dual.rs  lib.rs  matrix.rs  scalar.rs  vector.rs
src/matrix/: faer_mat.rs  mat.rs  mat_impl.rs  matrix_trait.rs  nalgebra_dmatrix.rs  nalgebra_dmatrix_impl.rs  nalgebra_smatrix.rs  nalgebra_smatrix_impl.rs  ndarray_array2.rs  ndarray_array2_impl.rs
src/vector/: faer_mat.rs  nalgebra_dvector.rs  nalgebra_dvector_impl.rs  nalgebra_svector.rs  nalgebra_svector_impl.rs  ndarray_array1.rs  ndarray_array1_impl.rs  vec.rs  vec_impl.rs  vector_trait.rs
tests/: matrix_add.rs  matrix_associated_types.rs  matrix_div.rs  matrix_dynamic_vs_static.rs  matrix_mul.rs  matrix_new_with_shape.rs  matrix_order.rs  matrix_shape.rs  matrix_slice.rs  matrix_sub.rs  scalar.rs  vector.rs  vector_add.rs  vector_associated_types.rs  vector_div.rs  vector_dot.rs  vector_dynamic_vs_static.rs  vector_is_empty.rs  vector_len.rs  vector_mul.rs  vector_new_with_length.rs  vector_slice.rs  vector_sub.rs  vector_vget.rs  vector_vset.rs
