[package]
name = "linalg-traits"
version = "0.12.1"
authors = ["Tamas Kis"]
edition = "2024"
description = "Traits for generic linear algebra."
documentation = "https://docs.rs/linalg-traits"
repository = "https://github.com/tamaskis/linalg_traits"
license = "MIT OR Apache-2.0"

exclude = [".github/", ".vscode/", "book/", ".gitignore", "Cargo.lock"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]
features = ["faer", "faer-traits", "nalgebra", "ndarray"]

[dependencies]
num-traits = "0.2.19"
faer = { version = "0.22.6", optional = true }
faer-traits = { version = "0.22.1", optional = true }
nalgebra = { version = "0.34.0", optional = true }
ndarray = { version = "0.16.1", optional = true }
tracing-subscriber = "0.3.20"

[dev-dependencies]
numtest = "0.3.1"
