[package]
name = "linalg-traits"
version = "0.13.0"
authors = ["Tamas Kis"]
edition = "2024"
description = "Traits for generic linear algebra."
documentation = "https://docs.rs/linalg-traits"
repository = "https://github.com/tamaskis/linalg_traits"
license = "MIT OR Apache-2.0"

exclude = [".github/", ".vscode/", "book/", ".gitignore", "Cargo.lock"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]
features = ["faer", "faer-traits", "nalgebra", "ndarray"]

[dependencies]
num-traits = "0.2.19"
faer = { version = "0.23.2", optional = true }
faer-traits = { version = "0.23.2", optional = true }
nalgebra = { version = "0.34.1", optional = true }
ndarray = { version = "0.17.1", optional = true }
tracing-subscriber = "0.3.22"

[dev-dependencies]
numtest = "0.4.0"
